force-app/main/default/objects/Survey__c/fields/Accepting_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Clients__c</fullName>
    <label>Accepting New Clients</label>
    <length>50</length>
    <type>Text</type>
</CustomField>