force-app/main/default/objects/Survey__c/fields/ACDF_Address_1__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Address_1__c</fullName>
    <label>ACDF Address 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>