force-app/main/default/objects/Survey__c/fields/ACDF_Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Branch_Office__c</fullName>
    <label>ACDF Branch Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>