force-app/main/default/objects/Survey__c/fields/ACDF_City_Of_Focus__c.field-meta.xml
<CustomField>
    <fullName>ACDF_City_Of_Focus__c</fullName>
    <label>ACDF City Of Focus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>