force-app/main/default/objects/Survey__c/fields/ACDF_IP_Specialty__c.field-meta.xml
<CustomField>
    <fullName>ACDF_IP_Specialty__c</fullName>
    <label>ACDF IP Specialty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>