force-app/main/default/objects/Survey__c/fields/ACDF_License_Num__c.field-meta.xml
<CustomField>
    <fullName>ACDF_License_Num__c</fullName>
    <label>ACDF License Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>