force-app/main/default/objects/Survey__c/fields/ACDF_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Parent_Company__c</fullName>
    <label>ACDF Parent Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>