force-app/main/default/objects/Survey__c/fields/ACDF_Primary_Service__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Primary_Service__c</fullName>
    <label>ACDF Primary Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>