force-app/main/default/objects/Survey__c/fields/ACDF_WFA_Channel__c.field-meta.xml
<CustomField>
    <fullName>ACDF_WFA_Channel__c</fullName>
    <label>ACDF WFA Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>