force-app/main/default/objects/Survey__c/fields/ACDF_Years_Active__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Years_Active__c</fullName>
    <label>ACDF Years Active</label>
    <length>20</length>
    <type>Text</type>
</CustomField>