force-app/main/default/objects/Survey__c/fields/Active_License_No_Neg_Actions__c.field-meta.xml
<CustomField>
    <fullName>Active_License_No_Neg_Actions__c</fullName>
    <label>Active License&amp;No Neg Actions</label>
    <length>50</length>
    <type>Text</type>
</CustomField>