force-app/main/default/objects/Survey__c/fields/Bankruptcy_Filed__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Filed__c</fullName>
    <label>Bankruptcy Filed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>