force-app/main/default/objects/Survey__c/fields/Bankruptcy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Notes__c</fullName>
    <label>Bankruptcy Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>