force-app/main/default/objects/Survey__c/fields/Branch_Mngr_Email__c.field-meta.xml
<CustomField>
    <fullName>Branch_Mngr_Email__c</fullName>
    <label>Branch Mngr Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>