force-app/main/default/objects/Survey__c/fields/Branch_Mngr_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Mngr_Name__c</fullName>
    <label>Branch Mngr Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>