force-app/main/default/objects/Survey__c/fields/Certify_True_Correct_Responses__c.field-meta.xml
<CustomField>
    <fullName>Certify_True_Correct_Responses__c</fullName>
    <label>Certify True &amp; Correct Responses</label>
    <length>50</length>
    <type>Text</type>
</CustomField>