force-app/main/default/objects/Survey__c/fields/Client_Assets__c.field-meta.xml
<CustomField>
    <fullName>Client_Assets__c</fullName>
    <label>Client Assets</label>
    <length>100</length>
    <type>Text</type>
</CustomField>