force-app/main/default/objects/Survey__c/fields/Client_Households__c.field-meta.xml
<CustomField>
    <fullName>Client_Households__c</fullName>
    <label>Client Households</label>
    <length>100</length>
    <type>Text</type>
</CustomField>