force-app/main/default/objects/Survey__c/fields/Complaint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Notes__c</fullName>
    <label>Complaint Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>