force-app/main/default/objects/Survey__c/fields/Complete_Quantity_Order__c.field-meta.xml
<CustomField>
    <fullName>Complete_Quantity_Order__c</fullName>
    <label>Complete Quantity Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>