force-app/main/default/objects/Survey__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>