force-app/main/default/objects/Survey__c/fields/Completed_Form__c.field-meta.xml
<CustomField>
    <fullName>Completed_Form__c</fullName>
    <label>Completed Form</label>
    <length>50</length>
    <type>Text</type>
</CustomField>