force-app/main/default/objects/Survey__c/fields/Customer_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaints__c</fullName>
    <label>Customer Complaints</label>
    <length>100</length>
    <type>Text</type>
</CustomField>