force-app/main/default/objects/Survey__c/fields/Designations__c.field-meta.xml
<CustomField>
    <fullName>Designations__c</fullName>
    <label>Designations</label>
    <length>200</length>
    <type>Text</type>
</CustomField>