force-app/main/default/objects/Survey__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>