force-app/main/default/objects/Survey__c/fields/Employee_Nominated_Award__c.field-meta.xml
<CustomField>
    <fullName>Employee_Nominated_Award__c</fullName>
    <label>Employee Nominated Award</label>
    <length>50</length>
    <type>Text</type>
</CustomField>