force-app/main/default/objects/Survey__c/fields/Exp_With_Five_Star__c.field-meta.xml
<CustomField>
    <fullName>Exp_With_Five_Star__c</fullName>
    <label>Exp With Five Star</label>
    <length>50</length>
    <type>Text</type>
</CustomField>