force-app/main/default/objects/Survey__c/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <label>Ext</label>
    <length>20</length>
    <type>Text</type>
</CustomField>