force-app/main/default/objects/Survey__c/fields/Felony_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Felony_Conviction__c</fullName>
    <label>Felony Conviction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>