force-app/main/default/objects/Survey__c/fields/Felony_Notes__c.field-meta.xml
<CustomField>
    <fullName>Felony_Notes__c</fullName>
    <label>Felony Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>