force-app/main/default/objects/Survey__c/fields/Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Link__c</fullName>
    <label>Form Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>