force-app/main/default/objects/Survey__c/fields/Good_Quality_Order__c.field-meta.xml
<CustomField>
    <fullName>Good_Quality_Order__c</fullName>
    <label>Good Quality Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>