force-app/main/default/objects/Survey__c/fields/IAR_Credentialed_Principal__c.field-meta.xml
<CustomField>
    <fullName>IAR_Credentialed_Principal__c</fullName>
    <label>IAR Credentialed/Principal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>