force-app/main/default/objects/Survey__c/fields/Improvement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Notes__c</fullName>
    <label>Improvement Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>