force-app/main/default/objects/Survey__c/fields/Industry_Board_Position__c.field-meta.xml
<CustomField>
    <fullName>Industry_Board_Position__c</fullName>
    <label>Industry Board Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>