force-app/main/default/objects/Survey__c/fields/Interested_In_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Leverage__c</fullName>
    <label>Interested In Leverage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>