force-app/main/default/objects/Survey__c/fields/Mandated_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Settlement__c</fullName>
    <label>Mandated Settlement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>