force-app/main/default/objects/Survey__c/fields/Nominator__c.field-meta.xml
<CustomField>
    <fullName>Nominator__c</fullName>
    <label>Nominator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>