force-app/main/default/objects/Survey__c/fields/Nominee__c.field-meta.xml
<CustomField>
    <fullName>Nominee__c</fullName>
    <label>Nominee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>