force-app/main/default/objects/Survey__c/fields/Other_Designations__c.field-meta.xml
<CustomField>
    <fullName>Other_Designations__c</fullName>
    <label>Other Designations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>