force-app/main/default/objects/Survey__c/fields/Pro_Bono_Activities__c.field-meta.xml
<CustomField>
    <fullName>Pro_Bono_Activities__c</fullName>
    <label>Pro Bono Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>