force-app/main/default/objects/Survey__c/fields/Profession_Type__c.field-meta.xml
<CustomField>
    <fullName>Profession_Type__c</fullName>
    <label>Profession Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>