force-app/main/default/objects/Survey__c/fields/Properly_Documented_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Properly_Documented_Invoice__c</fullName>
    <label>Properly Documented Invoice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>