force-app/main/default/objects/Survey__c/fields/Received_Great_Service__c.field-meta.xml
<CustomField>
    <fullName>Received_Great_Service__c</fullName>
    <label>Received Great Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>