force-app/main/default/objects/Survey__c/fields/Received_in_Delivery_Window__c.field-meta.xml
<CustomField>
    <fullName>Received_in_Delivery_Window__c</fullName>
    <label>Received in Delivery Window</label>
    <length>50</length>
    <type>Text</type>
</CustomField>