force-app/main/default/objects/Survey__c/fields/Regulatory_Action__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Action__c</fullName>
    <label>Regulatory Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>