force-app/main/default/objects/Survey__c/fields/Regulatory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Notes__c</fullName>
    <label>Regulatory Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>