force-app/main/default/objects/Survey__c/fields/Research_ID__c.field-meta.xml
<CustomField>
    <fullName>Research_ID__c</fullName>
    <label>Research ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>