force-app/main/default/objects/Survey__c/fields/Settlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Notes__c</fullName>
    <label>Settlement Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>