force-app/main/default/objects/Survey__c/fields/Share_Name_with_Nom__c.field-meta.xml
<CustomField>
    <fullName>Share_Name_with_Nom__c</fullName>
    <label>Share Name with Nom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>