force-app/main/default/objects/Survey__c/fields/Verified_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Verified_Contact_Info__c</fullName>
    <label>Verified Contact Info</label>
    <length>10</length>
    <type>Text</type>
</CustomField>