force-app/main/default/objects/Survey__c/fields/Why_Nominated__c.field-meta.xml
<CustomField>
    <fullName>Why_Nominated__c</fullName>
    <label>Why Nominated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>