force-app/main/default/objects/Survey__c/fields/X12_Mo_Transactions__c.field-meta.xml
<CustomField>
    <fullName>X12_Mo_Transactions__c</fullName>
    <label>12 Mo. Transactions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>