force-app/main/default/objects/Survey__c/fields/X12_Mo_Value__c.field-meta.xml
<CustomField>
    <fullName>X12_Mo_Value__c</fullName>
    <label>12 Mo. Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>