force-app/main/default/objects/Survey__c/fields/X1_Year_Retention__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Retention__c</fullName>
    <label>1 Year Retention</label>
    <length>100</length>
    <type>Text</type>
</CustomField>