force-app/main/default/objects/Survey__c/fields/X1_Yr_Billing_Realization__c.field-meta.xml
<CustomField>
    <fullName>X1_Yr_Billing_Realization__c</fullName>
    <label>1 Yr Billing Realization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>