force-app/main/default/objects/Survey__c/fields/X36_Mo_Transactions__c.field-meta.xml
<CustomField>
    <fullName>X36_Mo_Transactions__c</fullName>
    <label>36 Mo. Transactions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>