force-app/main/default/objects/Survey__c/fields/X36_Mo_Value__c.field-meta.xml
<CustomField>
    <fullName>X36_Mo_Value__c</fullName>
    <label>36 Mo. Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>