force-app/main/default/objects/Survey__c/fields/X5_Year_Retention__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Retention__c</fullName>
    <label>5 Year Retention</label>
    <length>100</length>
    <type>Text</type>
</CustomField>