force-app/main/default/objects/Survey__c/recordTypes/Recognition_Survey.recordType-meta.xml
<RecordType>
    <fullName>Recognition_Survey</fullName>
    <active>true</active>
    <label>Recognition Survey</label>
</RecordType>