force-app/main/default/objects/Survey__c/listViews/Employee_Recognition_Surveys.listView-meta.xml
<ListView>
    <fullName>Employee_Recognition_Surveys</fullName>
    <columns>Completed_Date__c</columns>
    <columns>NAME</columns>
    <columns>Nominator__c</columns>
    <columns>Nominee__c</columns>
    <columns>Employee_Nominated_Award__c</columns>
    <columns>Why_Nominated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Survey__c.Recognition_Survey</value>
    </filters>
    <label>Employee Recognition Surveys</label>
    <sharedTo>
        <group>Firm_Review_Program</group>
    </sharedTo>
</ListView>